Site aanpassingen + agenda week 15

--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/IventWeb.csproj
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/IventWeb.csproj
@@ -66,9 +66,11 @@
     <Content Include="css\bootstrap.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Inlog.aspx" />
+    <Content Include="jquery-1.11.2.js" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\npm.js" />
+    <Content Include="style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
