--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
@@ -10,5 +10,13 @@
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
-
+ <connectionStrings>
+   <add
+     name="DatabaseConnection"
+      connectionString="Data Source=xe;
+                         Initial Catalog=Local Oracle Server;
+                         User ID=system;
+                         Password=mijnww"
+      providerName="System.Data.OracleClient"/>
+ </connectionStrings>
 </configuration>
