Webconfig check plz

--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
@@ -16,8 +16,8 @@
     </system.web>
   <!-- veranderen connectionString-->
  <connectionStrings>
-   <add name="DatabaseConnection"
-    connectionString="Data Source=xe;                          Initial Catalog=Local Oracle Server;                          User ID=system;                          Password=mijnww"
+   <add name=""
+    connectionString="User ID=system; Password=mijnww; Data Source=; Pooling =false;"
     providerName="System.Data.OracleClient"/>
  </connectionStrings>
  <system.data>
