--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
@@ -14,11 +14,11 @@
       <compilation debug="true" targetFramework="4.5"/>
       <httpRuntime targetFramework="4.5"/>
     </system.web>
-  <!-- veranderen connectionString-->
+  <!-- veranderen connectionString - guess done-->
  <connectionStrings>
-   <add name="DatabaseConnection"
-    connectionString="Data Source=xe;                          Initial Catalog=Local Oracle Server;                          User ID=system;                          Password=mijnww"
-    providerName="System.Data.OracleClient"/>
+   <add name=""
+         providerName="Oracle.ManagedDataAccess.Client"
+         connectionString="User id=SYSTEM; password=aapje; Data Source=192.168.15.50/fhictora; Pooling=false;"/>
  </connectionStrings>
  <system.data>
   <DbProviderFactories>
