--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/bin/IventWeb.dll.config
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/bin/IventWeb.dll.config
@@ -14,7 +14,7 @@
       <compilation debug="true" targetFramework="4.5"/>
       <httpRuntime targetFramework="4.5"/>
     </system.web>
-  <!-- veranderen connectionString - guess done-->
+  <!-- veranderen connectionString -->
  <connectionStrings>
    <add name=""
          providerName="Oracle.ManagedDataAccess.Client"
@@ -42,4 +42,8 @@
    </dataSources>
   </version>
  </oracle.manageddataaccess.client>
+  <!-- Appsettings voor de fieldvalidations -->
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
