--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
@@ -15,11 +15,9 @@
       <httpRuntime targetFramework="4.5"/>
     </system.web>
   <!-- veranderen connectionString -->
- <connectionStrings>
-   <add name=""
-         providerName="Oracle.ManagedDataAccess.Client"
-         connectionString="User id=SYSTEM; password=aapje; Data Source=192.168.15.50/fhictora; Pooling=false;"/>
- </connectionStrings>
+  <connectionStrings>
+    <add name="myConnectionString" connectionString="User id=dbi322740; password=wDjvYBVqEV; Data Source=//192.168.15.50/fhictora; Pooling=false;"/>
+  </connectionStrings>
  <system.data>
   <DbProviderFactories>
    <remove invariant="Oracle.ManagedDataAccess.Client"/>
