--- a/_Applicaties/MateriaalVerhuurASP/MateriaalVerhuurASP/MateriaalVerhuurASP.csproj
+++ b/_Applicaties/MateriaalVerhuurASP/MateriaalVerhuurASP/MateriaalVerhuurASP.csproj
@@ -71,6 +71,7 @@
     <Content Include="WebForm2.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database.cs" />
     <Compile Include="MateriaalTerugbrengen.aspx.cs">
       <DependentUpon>MateriaalTerugbrengen.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -100,6 +101,7 @@
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
     </Compile>
+    <Compile Include="voorwerpen.cs" />
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
