--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/IventWeb.csproj
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/IventWeb.csproj
@@ -105,6 +105,7 @@
     <Compile Include="DataBaseKlassen\Categorie.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="DataBaseKlassen\Event.cs" />
+    <Compile Include="DataBaseKlassen\EventAanmaken.cs" />
     <Compile Include="DataBaseKlassen\Locatie.cs" />
     <Compile Include="EventBeheren.aspx.cs">
       <DependentUpon>EventBeheren.aspx</DependentUpon>
