--- a/_Applicaties/MateriaalVerhuurASP/MateriaalVerhuurASP/MateriaalVerhuurASP.csproj
+++ b/_Applicaties/MateriaalVerhuurASP/MateriaalVerhuurASP/MateriaalVerhuurASP.csproj
@@ -102,7 +102,7 @@
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
     </Compile>
-    <Compile Include="voorwerp.cs" />
+    <Compile Include="Voorwerp.cs" />
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
