--- a/_Applicaties/MateriaalVerhuurASP/MateriaalVerhuurASP/bin/MateriaalVerhuurASP.dll.config
+++ b/_Applicaties/MateriaalVerhuurASP/MateriaalVerhuurASP/bin/MateriaalVerhuurASP.dll.config
@@ -20,6 +20,12 @@
           providerName="Oracle.ManagedDataAccess.Client"
           connectionString="User id=dbi322740; password=wDjvYBVqEV; Data Source=//192.168.15.50/fhictora; Pooling=false;"/>
   </connectionStrings>
+  <appSettings>
+    <add key="ip" value="192.168.20.112" />
+    <add key="Username" value="Administrator" />
+    <add key="Password" value="Administrator" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="Oracle.ManagedDataAccess.Client"/>
