--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/bin/IventWeb.dll.config
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/bin/IventWeb.dll.config
@@ -16,7 +16,7 @@
     </system.web>
   <!-- veranderen connectionString -->
   <connectionStrings>
-    <add name="myConnectionString" connectionString="User id=dbi322740; password=wDjvYBVqEV; Data Source=//192.168.15.50/fhictora; Pooling=false;"/>
+    <add name="myConnectionString" connectionString="User id=dbi324575; password=GBNITclsn2; Data Source=//192.168.15.50/fhictora; Pooling=false;"/>
   </connectionStrings>
  <system.data>
   <DbProviderFactories>
