--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Web.config
@@ -12,7 +12,7 @@
     </configSections>
     <system.web>
       <compilation debug="true" targetFramework="4.5"/>
-      <httpRuntime targetFramework="4.5"/>
+      <httpRuntime targetFramework="4.5" maxRequestLength="1048576" executionTimeout="2000"/>
     </system.web>
   <!-- veranderen connectionString -->
   <connectionStrings>
