--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/IventWeb.csproj
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/IventWeb.csproj
@@ -271,6 +271,7 @@
   <ItemGroup>
     <Content Include="Masterpage.Master" />
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\publish.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
