--- a/______Reparatie/Reservering_Reparatie/Reservering_Reparatie/Reservering_Reparatie.csproj
+++ b/______Reparatie/Reservering_Reparatie/Reservering_Reparatie/Reservering_Reparatie.csproj
@@ -39,6 +39,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Oracle.ManagedDataAccess">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.12.1.022\lib\net40\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -57,7 +61,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Campeerplaats.aspx" />
+    <Content Include="Kampeerplaats.aspx" />
     <Content Include="CSS\Style.css" />
     <Content Include="Images\CampingPlattegrond.png" />
     <Content Include="Images\Cheering_crowd.jpg" />
@@ -67,13 +71,14 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="Boeking.cs" />
-    <Compile Include="Campeerplaats.aspx.cs">
-      <DependentUpon>Campeerplaats.aspx</DependentUpon>
+    <Compile Include="Kampeerplaats.aspx.cs">
+      <DependentUpon>Kampeerplaats.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Campeerplaats.aspx.designer.cs">
-      <DependentUpon>Campeerplaats.aspx</DependentUpon>
+    <Compile Include="Kampeerplaats.aspx.designer.cs">
+      <DependentUpon>Kampeerplaats.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Database.cs" />
     <Compile Include="Hoofdboeker.cs" />
     <Compile Include="Kampeerplaats.cs" />
     <Compile Include="Master.Master.cs">
@@ -91,9 +96,11 @@
     <Compile Include="Reservering.aspx.designer.cs">
       <DependentUpon>Reservering.aspx</DependentUpon>
     </Compile>
+    <Compile Include="StoredProcedure.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Master.Master" />
+    <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
