--- a/______Reparatie/Reservering_Reparatie/Reservering_Reparatie/bin/Reservering_Reparatie.dll.config
+++ b/______Reparatie/Reservering_Reparatie/Reservering_Reparatie/bin/Reservering_Reparatie.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -42,6 +42,6 @@
  </oracle.manageddataaccess.client>
   <!-- Appsettings voor de fieldvalidations -->
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
 </configuration>
